BUGFIX: cms ui removed extra padding from bottom of tools
git-svn-id: svn://svn.silverstripe.com/silverstripe/open/modules/cms/branches/2.3@70573 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/css/layout.css
+++ b/css/layout.css
@@ -366,7 +366,6 @@ body.stillLoading select {
 		}
 		#left #SortItems {
 			border-bottom: 1px solid #CCC;
-			margin-bottom: 2px;
 		}
 #TreeTools label {
 	display: block;
